add support to specify job state for next_task call
